# rust-game

./: Cargo.toml  config.toml
src/: config.rs  entity.rs  game.rs  main.rs  player.rs
